tests/compiler/function/example/missing_title.rs
use vrl::example;

fn main() {
    let _ex = example! {
        source: "code",
        result: Ok("output"),
    };
}
